2010-04-29  James Youngman  <jay@gnu.org>

	Removed some unused code.
	* delta.cc (delta_main): Removed some unused '#if 0' code.
	* sf-write.cc (update_checksum): Likewise.
	* my-getopt.cc (reorder): Likewise.
	* file.cc (file_lock): Likewise.
	* sccsname.cc (valid_filename): Likewise.
	(create): Likewise.
	(sub_file): Likewise.
	(make_valid): Likewise.
	* seqstate.cc (decide_disposition): Likewise.
	* sf-get3.cc (authorised): Likewise.
	* sid.cc (invalid_range): Likewise.
	* what.cc (main): Likewise.

2010-04-28  James Youngman  <jay@gnu.org>

	Use STL to implement mylist<T>.
	* mylist.h (mylist): Implement mylist<T> as std::vector<T>.
	* delta-table.h (mylist<T>::select(i)): delegate to l[i].
	* unit-tests/test_mylist.cc: Drop the requirement that the
	mylist<T> implementation does not need there to be a T::T(const
	T&) copy constructor.
	* mylist.h (mylist): Implement mylist<T>::operator==(const
	mylist<T>&) const, which the unit tests need.

	Inline delta::removed(), for a small performance boost.
	* delta.h (class delta): Inline delta::removed().
	* sccs-delta.cc: Remove the non-inline version. 

	Call strtoul to do the actual conversion, for a small performance boost.
	* sccsfile.cc (strict_atoul_idu): Call strtoul to perform the
	conversion itself.

	Generate a larger test file.
	* unit-tests/test_bigfile.cc (main): Increase the number of deltas
	in the produced file to about 30,000.

	Switch to using an STL data structure to represent the delta list.
	* delta-table.h (stl_delta_list): Reimplement delta_list using
	STL, reducing the time it takes to validate an SCCS file with
	30,000 deltas from 45s to 3s.   Separate the cssc_delta_table
	class from the data structure (a typedef delta_list) for looser
	coupling.  Retain the old data structure in the unused class
	mylist_delta_list.
	* delta-table.cc (delta_at_seq_exists): Delegate to the
	delta_list.
	(delta_at_seq): Likewise.
	(cssc_delta_table::~cssc_delta_table()): Since we no longer have a